--- a/views/userActivity.handlebars
+++ b/views/userActivity.handlebars
@@ -1,7 +1,7 @@
 {{>header}}
-<div id="activity-div" class="m-5 min-h-[70vh] bg-gray-300 flex flex-col">
+<div id="activity-div" class="m-5 min-h-[70vh] bg-gray-800 flex flex-col">
 
-    <div id="topDiv" class="bg-blue-900 h-[7vh] w-full flex items-center justify-evenly">
+    <div id="topDiv" class="bg-gray-800 h-[7vh] w-full flex items-center justify-evenly">
         <p class="bigText font-bold text-white text-lg">Name: {{user.firstName}} {{user.lastName}}</p>
         <p class="bigText font-bold text-white text-lg">Stevens Email: {{user.stevensEmail}}</p>
         <p class="bigText font-bold text-white text-lg">Academic Status: {{user.academicStatus}}</p>
@@ -18,7 +18,7 @@
         
     </div>
 
-    <div id="bottomDiv" class="bg-gray-300 flex-grow flex items-center justify-evenly flex-wrap">
+    <div id="bottomDiv" class="bg-gray-600 flex-grow flex items-center justify-evenly flex-wrap">
         <ul id="container"></ul>
     </div>
 
