--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,6 +3,7 @@
   <div class="overlay">
     <div class="text">
       <p>STEVENS OVERFLOW</p>
+      <p class="text-xl animated-text">Stevens Query Hub: Where Curiosity Meets Answers</p>
     </div>
   </div>
 </div>
