--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -41,13 +41,14 @@
             </div>
           {{/each}}
         </div>
-        <div>
-          <a href="/questions/{{question._id}}/comments/comment" class="addCommentButton mt-4 px-4 py-2 bg-sky-600 text-white rounded-md hover:bg-sky-700">Add a Comment</a>
-        </div>
+        {{#if owner}}
         <div class="operations my-4 mx-4 text-sm font-light"> 
           <span class="hover:text-sky-700 hover:cursor-pointer " id="editQuestion">edit &nbsp;</span>&nbsp;
-          <span class="hover:text-sky-700 hover:cursor-pointer " id="deleteQuestion">delete</span>
-          
+          <span class="hover:text-sky-700 hover:cursor-pointer " id="deleteQuestion">delete</span>  
+        </div>
+        {{/if}}
+        <div>
+          <a href="/questions/{{question._id}}/comments/comment" class="addCommentButton mt-4 px-4 py-2 bg-sky-600 text-white rounded-md hover:bg-sky-700">Add a Comment</a>
         </div>
 
       </div>
