--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -3,12 +3,12 @@
   <div class="questionWrapper1 flex flex-col mx-20">
     <div class="flex flex-row basis-1/5 border-b-2 py-7">
     <div class="basis-4/5"><h1 class="font-bold text-2xl text-slate-700">{{title}}</h1></div>
-    <div class="basis-1/5"><button class="rounded-lg px-2 py-2  bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" ><a href="/questions/question">Ask Question</a></button></div>
+    <div class="basis-1/5"><button class="rounded-lg px-2 py-2  bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" onclick="location.href='/questions/question'">Ask Question</button></div>
     </div>
     <div class="basis-4/5 flex flex-row">
       <div class="questionStats basis-2/7 my-4 mx-4">
         <span class="material-symbols-outlined rounded-full hover:bg-orange-100 p-4 hover:cursor-pointer thumb_up_icon" id="thumb_up">thumb_up</span><br>
-        <span class="inline-block max-w-[1px] text-center my-2 mx-6 text-center" id="votes" value="{{question.votes}}">{{question.votes}}</span><br>
+        <span class="inline-block max-w-[1px] text-center my-2 mx-6 text-center" id="votes">{{question.votes}}</span><br>
         <span class="material-symbols-outlined rounded-full hover:bg-orange-100 p-4 hover:cursor-pointer thumb_down_icon" id="thumb_down">thumb_down</span><br>
         <button id="questionId" value="{{question._id}}" hidden>{{question._id}}</button><br>
         <span class="material-symbols-outlined mx-4 hover:cursor-pointer bookmark_icon" id="bookmark">bookmark</span>
