--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -7,7 +7,9 @@
     <div class="questionsWrapper basis-3/5">
       <div class="flex flex-row py-4 border-b-2">
         <div class="basis-4/5"><h1 class="my-4 mx-8 text-4xl font-bold">{{title}}</h1></div>
-        <div class="basis-1/5"><button class="rounded-lg px-2 py-2 my-4 bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" ><a href="/questions/question">Ask Question</a></button></div>
+        <div class="basis-1/5">
+          <button class="rounded-lg px-2 py-2 my-4 bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" onclick="location.href='/questions/question'" >Ask Question</button>
+        </div>
       </div>
         <div class="filter-options flex flex-row">
           <div class="basis-4/5">
@@ -33,11 +35,9 @@
             <div class="question basis-2/3 my-4 w-fit ml-5 h-auto whitespace-normal text-ellipsis overflow-hidden">
               <h3 class="text-sky-600 text-lg font-semibold hover:text-sky-700"><a href="/questions/{{_id}}">{{title}}</a></h3>
               <p class="text-slate-500 py-6 my-2 text-ellipsis overflow-hidden max-h-36">{{problemDetails}}</p>
-              <ul>
               {{#each tagsObj}}
                 <button class="tags rounded-md border-slate-900 outline-0 px-2 py-1 my-1 bg-sky-100 text-sky-600 text-sm font-semibold hover:bg-sky-200" value="{{tag}}">{{tag}}</button>
               {{/each}}
-              </ul>
             </div>
           </div>
           {{/each}}
